<resources>
    <string name="app_name">LAY - Today</string>
    <string name="nothing">Nothing to show :[</string>
    <string name="hint_drug_name">Name</string>
    <string name="hint_lab_name">Laboratory</string>
    <string name="text_start">Start</string>
    <string name="text_end">End</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="text_frequency">Frequency : </string>
    <string name="text_start_frequency">Every </string>
    <string-array name="spinner_frequency_selector">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
    <string name="spinner_prompt_frequency">Day</string>
    <string name="text_when">Time : </string>
    <string-array name="spinner_time1">
        <item>Before</item>
        <item>During</item>
        <item>After</item>
    </string-array>
    <string name="spinner_prompt_time1">During</string>
    <string-array name="spinner_time2">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>
    <string name="spinner_prompt_time2">Diner</string>
    <string name="card_subtitle_string_text">Has to be taken</string>
    <string name="card_between"> to </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
